[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/AnimPickerWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/AnimPickerWindow.gd" type="Script" id=2]

[node name="AnimPickerWindow" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 37.0
margin_right = -7.0
margin_bottom = -37.0
script = ExtResource( 2 )

[node name="AnimPickerWidget" parent="." instance=ExtResource( 1 )]

[connection signal="popup_hide" from="." to="." method="_on_AnimPickerWindow_popup_hide"]
[connection signal="onAnimSelected" from="AnimPickerWidget" to="." method="_on_AnimPickerWidget_onAnimSelected"]
[connection signal="onCancelPressed" from="AnimPickerWidget" to="." method="_on_AnimPickerWidget_onCancelPressed"]
